force-app/main/default/objects/ProductCategory__c/fields/CheckoutCluster__c.field-meta.xml
<CustomField>
    <fullName>CheckoutCluster__c</fullName>
    <label>Checkout Cluster</label>
    <length>255</length>
    <type>Text</type>
</CustomField>