force-app/main/default/objects/ProductCategory__c/fields/ProductGeneration__c.field-meta.xml
<CustomField>
    <fullName>ProductGeneration__c</fullName>
    <label>Product Generation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>