force-app/main/default/objects/ProductCategory__c/fields/Visibility__c.field-meta.xml
<CustomField>
    <fullName>Visibility__c</fullName>
    <label>Visibility</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Visible to All</fullName>
                <default>true</default>
                <label>Visible to All</label>
            </value>
            <value>
                <fullName>Acct Mgmt Only</fullName>
            </value>
            <value>
                <fullName>Not Visible</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>