force-app/main/default/objects/ProductCategory__c/listViews/All_Categories.listView-meta.xml
<ListView>
    <fullName>All_Categories</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All Categories</label>
</ListView>